deploy/k8s/server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hyperchess-server-http-route-redirect
  namespace: hyperchess
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: http
  hostnames:
    - hyperchess.semanticallyinvalid.net
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hyperchess-server-http-route
  namespace: hyperchess
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - hyperchess.semanticallyinvalid.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/
      backendRefs:
        - name: hyperchess-server
          port: 80
